@@ -27,12 +27,22 @@ import static android.health.connect.HealthDataCategory.VITALS;
 import static android.health.connect.HealthPermissionCategory.BASAL_METABOLIC_RATE;
 import static android.health.connect.HealthPermissionCategory.EXERCISE;
 import static android.health.connect.HealthPermissionCategory.HEART_RATE;
+import static android.health.connect.HealthPermissionCategory.PLANNED_EXERCISE;
 import static android.health.connect.HealthPermissionCategory.STEPS;
+import static android.healthconnect.cts.utils.DataFactory.NOW;
 import static android.healthconnect.cts.utils.DataFactory.getDataOrigin;
 import static android.healthconnect.cts.utils.PermissionHelper.MANAGE_HEALTH_DATA;
+import static android.healthconnect.test.app.TestAppReceiver.ACTION_AGGREGATE_STEPS_COUNT;
+import static android.healthconnect.test.app.TestAppReceiver.ACTION_INSERT_EXERCISE_RECORD;
+import static android.healthconnect.test.app.TestAppReceiver.ACTION_INSERT_PLANNED_EXERCISE_RECORD;
 import static android.healthconnect.test.app.TestAppReceiver.ACTION_INSERT_STEPS_RECORDS;
 import static android.healthconnect.test.app.TestAppReceiver.ACTION_INSERT_WEIGHT_RECORDS;
+import static android.healthconnect.test.app.TestAppReceiver.ACTION_READ_STEPS_RECORDS_USING_FILTERS;
+import static android.healthconnect.test.app.TestAppReceiver.ACTION_READ_STEPS_RECORDS_USING_RECORD_IDS;
 import static android.healthconnect.test.app.TestAppReceiver.EXTRA_END_TIMES;
+import static android.healthconnect.test.app.TestAppReceiver.EXTRA_PACKAGE_NAMES;
+import static android.healthconnect.test.app.TestAppReceiver.EXTRA_PLANNED_EXERCISE_SESSION_ID;
+import static android.healthconnect.test.app.TestAppReceiver.EXTRA_RECORD_CLIENT_IDS;
 import static android.healthconnect.test.app.TestAppReceiver.EXTRA_RECORD_IDS;
 import static android.healthconnect.test.app.TestAppReceiver.EXTRA_RECORD_VALUES;
 import static android.healthconnect.test.app.TestAppReceiver.EXTRA_SENDER_PACKAGE_NAME;
@@ -41,12 +51,14 @@ import static android.healthconnect.test.app.TestAppReceiver.EXTRA_TIMES;
 import static com.android.compatibility.common.util.FeatureUtil.AUTOMOTIVE_FEATURE;
 import static com.android.compatibility.common.util.FeatureUtil.hasSystemFeature;
 import static com.android.compatibility.common.util.SystemUtil.runWithShellPermissionIdentity;
+import static com.android.healthfitness.flags.AconfigFlagHelper.isPersonalHealthRecordEnabled;
 
 import static com.google.common.truth.Truth.assertThat;
 
 import static java.util.Collections.unmodifiableList;
 import static java.util.Objects.requireNonNull;
 
+import android.Manifest;
 import android.app.UiAutomation;
 import android.content.Context;
 import android.content.Intent;
@@ -58,6 +70,7 @@ import android.health.connect.AggregateRecordsResponse;
 import android.health.connect.ApplicationInfoResponse;
 import android.health.connect.DeleteUsingFiltersRequest;
 import android.health.connect.FetchDataOriginsPriorityOrderResponse;
+import android.health.connect.GetMedicalDataSourcesRequest;
 import android.health.connect.HealthConnectDataState;
 import android.health.connect.HealthConnectException;
 import android.health.connect.HealthConnectManager;
@@ -99,12 +112,14 @@ import android.health.connect.datatypes.HeightRecord;
 import android.health.connect.datatypes.HydrationRecord;
 import android.health.connect.datatypes.IntermenstrualBleedingRecord;
 import android.health.connect.datatypes.LeanBodyMassRecord;
+import android.health.connect.datatypes.MedicalDataSource;
 import android.health.connect.datatypes.MenstruationFlowRecord;
 import android.health.connect.datatypes.MenstruationPeriodRecord;
 import android.health.connect.datatypes.Metadata;
 import android.health.connect.datatypes.NutritionRecord;
 import android.health.connect.datatypes.OvulationTestRecord;
 import android.health.connect.datatypes.OxygenSaturationRecord;
+import android.health.connect.datatypes.PlannedExerciseSessionRecord;
 import android.health.connect.datatypes.PowerRecord;
 import android.health.connect.datatypes.Record;
 import android.health.connect.datatypes.RespiratoryRateRecord;
@@ -137,6 +152,7 @@ import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.lang.reflect.Field;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDate;
@@ -154,16 +170,17 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Consumer;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public final class TestUtils {
     private static final String TAG = "HCTestUtils";
-    private static final int TIMEOUT_SECONDS = 5;
 
     public static final String PKG_TEST_APP = "android.healthconnect.test.app";
     private static final String TEST_APP_RECEIVER =
@@ -198,7 +215,7 @@ public final class TestUtils {
                 .getId();
     }
 
-     /**
+    /**
      * Insert record to the database.
      *
      * @param record record to insert
@@ -217,6 +234,16 @@ public final class TestUtils {
     public static List<Record> insertRecords(List<? extends Record> records)
             throws InterruptedException {
         return insertRecords(records, ApplicationProvider.getApplicationContext());
+    }
+
+    /**
+     * Inserts records to the database.
+     *
+     * @param records records to insert
+     * @return inserted records
+     */
+    public static List<Record> insertRecords(Record... records) throws InterruptedException {
+        return insertRecords(Arrays.asList(records), ApplicationProvider.getApplicationContext());
     }
 
     /**
@@ -249,7 +276,8 @@ public final class TestUtils {
         return record -> seen.add(record.getMetadata().getId());
     }
 
-    public static void updateRecords(List<Record> records) throws InterruptedException {
+    /** Updates the provided records in the database. */
+    public static void updateRecords(List<? extends Record> records) throws InterruptedException {
         updateRecords(records, ApplicationProvider.getApplicationContext());
     }
 
@@ -421,6 +449,32 @@ public final class TestUtils {
         }
     }
 
+    /**
+     * Delete all health records (datasources, resources etc) stored in the Health Connect database.
+     */
+    public static void deleteAllMedicalData() throws InterruptedException {
+        if (!isPersonalHealthRecordEnabled()) {
+            return;
+        }
+        UiAutomation uiAutomation = InstrumentationRegistry.getInstrumentation().getUiAutomation();
+        uiAutomation.adoptShellPermissionIdentity(MANAGE_HEALTH_DATA);
+        try {
+            HealthConnectReceiver<List<MedicalDataSource>> receiver = new HealthConnectReceiver<>();
+            HealthConnectManager manager = getHealthConnectManager();
+            ExecutorService executor = Executors.newSingleThreadExecutor();
+            manager.getMedicalDataSources(
+                    new GetMedicalDataSourcesRequest.Builder().build(), executor, receiver);
+            List<MedicalDataSource> dataSources = receiver.getResponse();
+            for (MedicalDataSource dataSource : dataSources) {
+                HealthConnectReceiver<Void> callback = new HealthConnectReceiver<>();
+                manager.deleteMedicalDataSourceWithData(dataSource.getId(), executor, callback);
+                callback.verifyNoExceptionOrThrow();
+            }
+        } finally {
+            uiAutomation.dropShellPermissionIdentity();
+        }
+    }
+
     public static void verifyDeleteRecords(List<RecordIdFilter> request)
             throws InterruptedException {
         verifyDeleteRecords(request, ApplicationProvider.getApplicationContext());
@@ -504,6 +558,17 @@ public final class TestUtils {
         }
     }
 
+    /** Calls {@link #startMigration()} ()} with shell permission identity. */
+    public static void startMigrationWithShellPermissionIdentity() {
+        runWithShellPermissionIdentity(
+                () -> {
+                    startMigration();
+                    assertThat(TestUtils.getHealthConnectDataMigrationState())
+                            .isEqualTo(HealthConnectDataState.MIGRATION_STATE_IN_PROGRESS);
+                },
+                Manifest.permission.MIGRATE_HEALTH_CONNECT_DATA);
+    }
+
     public static void startMigration() throws InterruptedException {
         MigrationReceiver receiver = new MigrationReceiver();
         getHealthConnectManager().startMigration(Executors.newSingleThreadExecutor(), receiver);
@@ -524,6 +589,12 @@ public final class TestUtils {
         receiver.verifyNoExceptionOrThrow();
     }
 
+    /** Calls {@link #finishMigration()} with shell permission identity. */
+    public static void finishMigrationWithShellPermissionIdentity() {
+        runWithShellPermissionIdentity(
+                TestUtils::finishMigration, Manifest.permission.MIGRATE_HEALTH_CONNECT_DATA);
+    }
+
     public static void insertMinDataMigrationSdkExtensionVersion(int version)
             throws InterruptedException {
         MigrationReceiver receiver = new MigrationReceiver();
@@ -540,6 +611,26 @@ public final class TestUtils {
                         // TODO(b/241542162): Avoid reflection once TestApi can be called from CTS
                         service.getClass().getMethod("deleteAllStagedRemoteData").invoke(service),
                 "android.permission.DELETE_STAGED_HEALTH_CONNECT_REMOTE_DATA");
+    }
+
+    /** Set lower rate limits for testing */
+    public static boolean setLowerRateLimitsForTesting(boolean enabled) {
+        HealthConnectManager service = getHealthConnectManager();
+        try {
+            runWithShellPermissionIdentity(
+                    () ->
+                            // TODO(b/241542162): Avoid reflection once TestApi can be called from
+                            // CTS
+                            service.getClass()
+                                    .getMethod("setLowerRateLimitsForTesting", boolean.class)
+                                    .invoke(service, enabled),
+                    "android.permission.DELETE_STAGED_HEALTH_CONNECT_REMOTE_DATA");
+            return true;
+        } catch (RuntimeException e) {
+            // Old versions of the module don't have this API.
+            Log.e(TAG, "Couldn't override quota for testing", e);
+            return false;
+        }
     }
 
     public static int getHealthConnectDataMigrationState() throws InterruptedException {
@@ -751,6 +842,9 @@ public final class TestUtils {
                 BasalMetabolicRateRecord.class,
                 new RecordTypeInfoTestResponse(
                         BODY_MEASUREMENTS, BASAL_METABOLIC_RATE, new ArrayList<>()));
+        expectedResponseMap.put(
+                PlannedExerciseSessionRecord.class,
+                new RecordTypeInfoTestResponse(ACTIVITY, PLANNED_EXERCISE, new ArrayList<>()));
     }
 
     public static FetchDataOriginsPriorityOrderResponse fetchDataOriginsPriorityOrder(
@@ -811,12 +905,12 @@ public final class TestUtils {
     }
 
     @NonNull
-    static HealthConnectManager getHealthConnectManager() {
+    public static HealthConnectManager getHealthConnectManager() {
         return getHealthConnectManager(ApplicationProvider.getApplicationContext());
     }
 
     @NonNull
-    private static HealthConnectManager getHealthConnectManager(Context context) {
+    public static HealthConnectManager getHealthConnectManager(Context context) {
         return requireNonNull(context.getSystemService(HealthConnectManager.class));
     }
 
@@ -834,11 +928,39 @@ public final class TestUtils {
                 WRITE_ALLOWLISTED_DEVICE_CONFIG);
     }
 
+    /** Reads {@link StepsRecord}s using record IDs. */
+    public static void readStepsRecordsUsingRecordIdsViaTestApp(
+            Context context, List<String> recordIds) {
+        Bundle extras = new Bundle();
+        extras.putStringArrayList(EXTRA_RECORD_IDS, new ArrayList<>(recordIds));
+        sendCommandToTestAppReceiver(context, ACTION_READ_STEPS_RECORDS_USING_RECORD_IDS, extras);
+    }
+
+    /** Reads {@link StepsRecord}s using package name filters. */
+    public static void readStepsRecordsUsingFiltersViaTestApp(
+            Context context, List<String> packageNameFilters) {
+        Bundle extras = new Bundle();
+        extras.putStringArrayList(EXTRA_PACKAGE_NAMES, new ArrayList<>(packageNameFilters));
+        sendCommandToTestAppReceiver(context, ACTION_READ_STEPS_RECORDS_USING_FILTERS, extras);
+    }
+
+    /** Aggregates {@link StepsRecord}s using package name filters. */
+    public static void aggregateStepsCount(Context context, List<String> packageNameFilters) {
+        Bundle extras = new Bundle();
+        extras.putStringArrayList(EXTRA_PACKAGE_NAMES, new ArrayList<>(packageNameFilters));
+        sendCommandToTestAppReceiver(context, ACTION_AGGREGATE_STEPS_COUNT, extras);
+    }
+
     public static void sendCommandToTestAppReceiver(Context context, String action) {
         sendCommandToTestAppReceiver(context, action, /* extras= */ null);
     }
 
     public static void sendCommandToTestAppReceiver(Context context, String action, Bundle extras) {
+        // This call to reset() is important!
+        // reset() needs to be called every time before a call is made to the test app, otherwise,
+        // TestReceiver won't receive the result from the test app.
+        android.healthconnect.cts.utils.TestReceiver.reset();
+
         final Intent intent = new Intent(action).setClassName(PKG_TEST_APP, TEST_APP_RECEIVER);
         intent.putExtra(EXTRA_SENDER_PACKAGE_NAME, context.getPackageName());
         if (extras != null) {
@@ -848,40 +970,70 @@ public final class TestUtils {
     }
 
     /** Sets up the priority list for aggregation tests. */
-    public static void setupAggregation(String packageName, int dataCategory)
-            throws InterruptedException {
-        insertRecordsForPriority(packageName);
+    public static void setupAggregation(String packageName, int dataCategory) {
+        try {
+            setupAggregation(
+                    record -> insertRecords(Collections.singletonList(record)),
+                    packageName,
+                    dataCategory);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
+    }
 
-        // Add the packageName inserting the records to the priority list manually
+    /** Sets up the priority list for aggregation tests. */
+    public static void setupAggregation(
+            ThrowingConsumer<Record> inserter, String packageName, int dataCategory)
+            throws Exception {
+        inserter.acceptOrThrow(getAnUnaggregatableRecord(packageName));
+        setupAggregation(List.of(packageName), dataCategory);
+    }
+
+    /**
+     * Sets up the priority list for aggregation tests.
+     *
+     * <p>In order for this method to work, eac of the {@code packageNames} needs to have at least
+     * one record of any type in the HC DB before this method is called.
+     *
+     * <p>This is mainly used to setup priority list for a test app, so a test can read aggregation
+     * of data inserted by a test app. It would be nicer if this method take an instance of a test
+     * app such as {@code TestAppProxy}, however, it would requires this TestUtils class depends on
+     * the dependency where the TestAppProxy comes from, which then would create a dependency cycle
+     * because TestAppProxy's dependency is already using this TestUtils class.
+     */
+    public static void setupAggregation(List<String> packageNames, int dataCategory)
+            throws Exception {
+        // Add the packageNames inserting the records to the priority list manually
         // Since CTS tests get their permissions granted at install time and skip
         // the Health Connect APIs that would otherwise add the packageName to the priority list
-
-        updatePriorityWithManageHealthDataPermission(dataCategory, Arrays.asList(packageName));
+        updatePriorityWithManageHealthDataPermission(dataCategory, packageNames);
         FetchDataOriginsPriorityOrderResponse newPriority =
                 getPriorityWithManageHealthDataPermission(dataCategory);
         List<String> newPriorityString =
                 newPriority.getDataOriginsPriorityOrder().stream()
                         .map(DataOrigin::getPackageName)
                         .toList();
-        assertThat(newPriorityString.size()).isEqualTo(1);
-        assertThat(newPriorityString.get(0)).isEqualTo(packageName);
+        assertThat(newPriorityString).isEqualTo(packageNames);
     }
 
     /** Inserts a record that does not support aggregation to enable the priority list. */
     public static void insertRecordsForPriority(String packageName) throws InterruptedException {
         // Insert records that do not support aggregation so that the AppInfoTable is initialised
-        MenstruationPeriodRecord recordToInsert =
-                new MenstruationPeriodRecord.Builder(
-                                new Metadata.Builder()
-                                        .setDataOrigin(
-                                                new DataOrigin.Builder()
-                                                        .setPackageName(packageName)
-                                                        .build())
-                                        .build(),
-                                Instant.now(),
-                                Instant.now().plusMillis(1000))
-                        .build();
-        insertRecords(Arrays.asList(recordToInsert));
+        insertRecords(List.of(getAnUnaggregatableRecord(packageName)));
+    }
+
+    /** Returns a {@link Record} that does not support aggregation. */
+    private static Record getAnUnaggregatableRecord(String packageName) {
+        return new MenstruationPeriodRecord.Builder(
+                        new Metadata.Builder()
+                                .setDataOrigin(
+                                        new DataOrigin.Builder()
+                                                .setPackageName(packageName)
+                                                .build())
+                                .build(),
+                        NOW,
+                        NOW.plusMillis(1000))
+                .build();
     }
 
     /** Updates the priority list after getting the MANAGE_HEALTH_DATA permission. */
@@ -915,33 +1067,18 @@ public final class TestUtils {
                                                 .build())
                         .collect(Collectors.toList());
 
-        CountDownLatch latch = new CountDownLatch(1);
-        AtomicReference<HealthConnectException> healthConnectExceptionAtomicReference =
-                new AtomicReference<>();
+        HealthConnectReceiver<Void> receiver = new HealthConnectReceiver<>();
         UpdateDataOriginPriorityOrderRequest updateDataOriginPriorityOrderRequest =
                 new UpdateDataOriginPriorityOrderRequest(dataOrigins, permissionCategory);
         service.updateDataOriginPriorityOrder(
                 updateDataOriginPriorityOrderRequest,
                 Executors.newSingleThreadExecutor(),
-                new OutcomeReceiver<>() {
-                    @Override
-                    public void onResult(Void result) {
-                        latch.countDown();
-                    }
+                receiver);
 
-                    @Override
-                    public void onError(HealthConnectException exception) {
-                        healthConnectExceptionAtomicReference.set(exception);
-                        latch.countDown();
-                    }
-                });
         assertThat(updateDataOriginPriorityOrderRequest.getDataCategory())
                 .isEqualTo(permissionCategory);
         assertThat(updateDataOriginPriorityOrderRequest.getDataOriginInOrder()).isNotNull();
-        assertThat(latch.await(3, TimeUnit.SECONDS)).isTrue();
-        if (healthConnectExceptionAtomicReference.get() != null) {
-            throw healthConnectExceptionAtomicReference.get();
-        }
+        receiver.verifyNoExceptionOrThrow(3);
     }
 
     public static boolean isHardwareSupported() {
@@ -1049,28 +1186,68 @@ public final class TestUtils {
                 .toInstant(ZoneOffset.UTC);
     }
 
-    public static List<String> insertStepsRecordViaTestApp(
+    /** Inserts {@link StepsRecord} via test app with the specified data. */
+    public static String insertStepsRecordViaTestApp(
             Context context, Instant startTime, Instant endTime, long value) {
+        return insertStepsRecordViaTestApp(
+                context, startTime, endTime, /* clientId= */ null, value);
+    }
+
+    /** Inserts {@link StepsRecord} via test app with the specified data. */
+    public static String insertStepsRecordViaTestApp(
+            Context context, Instant startTime, Instant endTime, String clientId, long value) {
         Bundle bundle = new Bundle();
         bundle.putLongArray(EXTRA_TIMES, new long[] {startTime.toEpochMilli()});
         bundle.putLongArray(EXTRA_END_TIMES, new long[] {endTime.toEpochMilli()});
+        bundle.putStringArray(EXTRA_RECORD_CLIENT_IDS, new String[] {clientId});
         bundle.putLongArray(EXTRA_RECORD_VALUES, new long[] {value});
-        android.healthconnect.cts.utils.TestReceiver.reset();
         sendCommandToTestAppReceiver(context, ACTION_INSERT_STEPS_RECORDS, bundle);
         return android.healthconnect.cts.utils.TestReceiver.getResult()
-                .getStringArrayList(EXTRA_RECORD_IDS);
+                .getStringArrayList(EXTRA_RECORD_IDS)
+                .get(0);
     }
 
     /** Inserts {@link WeightRecord} via test app with the specified data. */
-    public static List<String> insertWeightRecordViaTestApp(
-            Context context, Instant time, double value) {
+    public static String insertWeightRecordViaTestApp(Context context, Instant time, double value) {
+        return insertWeightRecordViaTestApp(context, time, /* clientId= */ null, value);
+    }
+
+    /** Inserts {@link WeightRecord} via test app with the specified data. */
+    public static String insertWeightRecordViaTestApp(
+            Context context, Instant time, String clientId, double value) {
         Bundle bundle = new Bundle();
         bundle.putLongArray(EXTRA_TIMES, new long[] {time.toEpochMilli()});
+        bundle.putStringArray(EXTRA_RECORD_CLIENT_IDS, new String[] {clientId});
         bundle.putDoubleArray(EXTRA_RECORD_VALUES, new double[] {value});
-        android.healthconnect.cts.utils.TestReceiver.reset();
         sendCommandToTestAppReceiver(context, ACTION_INSERT_WEIGHT_RECORDS, bundle);
         return android.healthconnect.cts.utils.TestReceiver.getResult()
-                .getStringArrayList(EXTRA_RECORD_IDS);
+                .getStringArrayList(EXTRA_RECORD_IDS)
+                .get(0);
+    }
+
+    /** Inserts {@link StepsRecord} via test app with the specified data. */
+    public static String insertExerciseRecordViaTestApp(
+            Context context, Instant startTime, Instant endTime, String plannedExerciseSessionId) {
+        Bundle bundle = new Bundle();
+        bundle.putLongArray(EXTRA_TIMES, new long[] {startTime.toEpochMilli()});
+        bundle.putLongArray(EXTRA_END_TIMES, new long[] {endTime.toEpochMilli()});
+        bundle.putString(EXTRA_PLANNED_EXERCISE_SESSION_ID, plannedExerciseSessionId);
+        sendCommandToTestAppReceiver(context, ACTION_INSERT_EXERCISE_RECORD, bundle);
+        return android.healthconnect.cts.utils.TestReceiver.getResult()
+                .getStringArrayList(EXTRA_RECORD_IDS)
+                .get(0);
+    }
+
+    /** Inserts {@link StepsRecord} via test app with the specified data. */
+    public static String insertPlannedExerciseSessionRecordViaTestApp(
+            Context context, Instant startTime, Instant endTime) {
+        Bundle bundle = new Bundle();
+        bundle.putLongArray(EXTRA_TIMES, new long[] {startTime.toEpochMilli()});
+        bundle.putLongArray(EXTRA_END_TIMES, new long[] {endTime.toEpochMilli()});
+        sendCommandToTestAppReceiver(context, ACTION_INSERT_PLANNED_EXERCISE_RECORD, bundle);
+        return android.healthconnect.cts.utils.TestReceiver.getResult()
+                .getStringArrayList(EXTRA_RECORD_IDS)
+                .get(0);
     }
 
     /** Extracts and returns ids of the provided records. */
@@ -1091,6 +1268,45 @@ public final class TestUtils {
             builder.addDataOrigins(getDataOrigin(packageName));
         }
         return builder.build();
+    }
+
+    /** Copies record ids from the one list to another in order. Workaround for b/328228842. */
+    // TODO(b/328228842): Avoid using reflection once we have Builder(Record) constructors
+    public static void copyRecordIdsViaReflection(
+            List<? extends Record> from, List<? extends Record> to) {
+        assertThat(from).hasSize(to.size());
+
+        for (int i = 0; i < from.size(); i++) {
+            copyRecordIdViaReflection(from.get(i), to.get(i));
+        }
+    }
+
+    /**
+     * Sets value for a field using reflection. This can be used to set fields for immutable class.
+     */
+    public static void setFieldValueUsingReflection(Object object, String fieldName, Object value)
+            throws NoSuchFieldException, IllegalAccessException {
+        Field field = object.getClass().getDeclaredField(fieldName);
+        field.setAccessible(true);
+        field.set(object, value);
+    }
+
+    // TODO(b/328228842): Avoid using reflection once we have Builder(Record) constructors
+    private static void copyRecordIdViaReflection(Record from, Record to) {
+        setRecordIdViaReflection(to.getMetadata(), from.getMetadata().getId());
+    }
+
+    // TODO(b/328228842): Avoid using reflection once we have Builder(Record) constructors
+    private static void setRecordIdViaReflection(Metadata metadata, String id) {
+        try {
+            Field field = Metadata.class.getDeclaredField("mId");
+            boolean isAccessible = field.isAccessible();
+            field.setAccessible(true);
+            field.set(metadata, id);
+            field.setAccessible(isAccessible);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
     }
 
     public static final class RecordAndIdentifier {
@@ -1138,40 +1354,25 @@ public final class TestUtils {
         }
     }
 
-    private static class TestReceiver<T, E extends RuntimeException>
-            implements OutcomeReceiver<T, E> {
-        private final CountDownLatch mLatch = new CountDownLatch(1);
-        private final AtomicReference<T> mResponse = new AtomicReference<>();
-        private final AtomicReference<E> mException = new AtomicReference<>();
+    public static final class MigrationReceiver
+            extends TestOutcomeReceiver<Void, MigrationException> {}
 
-        public T getResponse() throws InterruptedException {
-            verifyNoExceptionOrThrow();
-            return mResponse.get();
-        }
+    /**
+     * A {@link Consumer} that allows throwing checked exceptions from its single abstract method.
+     */
+    @FunctionalInterface
+    @SuppressWarnings("FunctionalInterfaceMethodChanged")
+    public interface ThrowingConsumer<T> extends Consumer<T> {
+        /** Implementations of this method might throw exception. */
+        void acceptOrThrow(T t) throws Exception;
 
-        public void verifyNoExceptionOrThrow() throws InterruptedException {
-            assertThat(mLatch.await(TIMEOUT_SECONDS, TimeUnit.SECONDS)).isTrue();
-            if (mException.get() != null) {
-                throw mException.get();
+        @Override
+        default void accept(T t) {
+            try {
+                acceptOrThrow(t);
+            } catch (Exception ex) {
+                throw new RuntimeException(ex);
             }
         }
-
-        @Override
-        public void onResult(T result) {
-            mResponse.set(result);
-            mLatch.countDown();
-        }
-
-        @Override
-        public void onError(@NonNull E error) {
-            mException.set(error);
-            Log.e(TAG, error.getMessage());
-            mLatch.countDown();
-        }
     }
-
-    private static final class HealthConnectReceiver<T>
-            extends TestReceiver<T, HealthConnectException> {}
-
-    private static final class MigrationReceiver extends TestReceiver<Void, MigrationException> {}
 }
